content/pt-br/devops/kubernetes/files/09/meu/argocd-external-name.yaml
kind: Service
apiVersion: v1
metadata:
  name: argocd-server
spec:
  type: ExternalName
  externalName: argocd-server.argocd.svc.cluster.local
