content/pt-br/devops/kubernetes/files/09/meu/grafana-external-name.yaml
kind: Service
apiVersion: v1
metadata:
  name: grafana
spec:
  type: ExternalName
  externalName: grafana.monitoring.svc.cluster.local
