content/pt-br/devops/kubernetes/files/09/meu/nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: portfolio
  labels:
    app: portfolio
spec:
  selector:
    app: portfolio
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      name: tcp-app
  type: ClusterIP
